job-assignment-js

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,12 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "RSS Hackathon Backend - Team Role Assignment API",
-  "main": "dist/server.js",
+  "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
-    "build": "tsc",
-    "start": "node dist/server.js",
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js",
     "lint": "eslint .",
     "test": "jest"
   },
@@ -19,16 +18,10 @@
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/cors": "^2.8.17",
-    "@types/node": "^22.9.0",
-    "tsx": "^4.19.1",
-    "typescript": "^5.8.3",
-    "eslint": "^9.13.0",
-    "@typescript-eslint/eslint-plugin": "^8.11.0",
-    "@typescript-eslint/parser": "^8.11.0"
+    "nodemon": "^3.0.1",
+    "eslint": "^9.13.0"
   },
-  "keywords": ["api", "express", "typescript", "ai", "team-management"],
+  "keywords": ["api", "express", "javascript", "ai", "team-management"],
   "author": "",
   "license": "MIT"
 }
