--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router-dom": "^7.8.2",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
